added new algorithm but broke the GC for k=25