@@ -3,12 +3,15 @@
   :url "https://github.com/filippovitale/clj-syd"
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.5.0-RC17"]
-                 [perforate "0.2.3"]]
-  :plugins [[perforate "0.2.3"]]
-  :eval-in :leiningen :profiles {:clj1.5 {:dependencies [[org.clojure/clojure "1.5.0-RC17"]]}
-                                 :clj1.4 {:dependencies [[org.clojure/clojure "1.4.0"]]}}
-  :perforate {:environments [{:profiles [:clj1.5 ] :namespaces [clj-syd.benchmarks.core]}
-                             {:profiles [:clj1.4 ] :namespaces [clj-syd.benchmarks.core]}]}
-  ;;:jvm-opts ["-Xmx1g"]
+  :dependencies [[org.clojure/clojure "1.5.1"]
+                 [perforate "0.2.4"]]
+  :plugins [[perforate "0.2.4"]]
+  :profiles {:clj1.5 {:dependencies [[org.clojure/clojure "1.5.1"]]}}
+  :perforate {:environments [{:name :default-1.5
+                              :profiles [:clj1.5 ]
+                              :namespaces [clj-syd.benchmarks.core]}]}
+  :jvm-opts ["-Xmx3g"
+             ;"-XX:+UseConcMarkSweepGC"
+             ;"-XX:+DisableExplicitGC"
+             ]
   :main clj-syd.core)
